# bv-little-qc-defect

./: .travis.yml  Benchmarks.hs  LICENSE  README.md  TestSuite.hs  bv-little.cabal  changelog.md
Data/: ExampleType.hs
bench/: Benchmarks.hs
src/Data/: ExampleType.hs
src/Data/BitVector/: LittleEndian.hs
test/: TestDouble.hs  TestInt.hs  TestInteger.hs  TestSuite.hs  TestWord.hs
