name:                bv-little
version:             0.1.0.0

-- A short (one-line) description of the package.
synopsis:            Time & space efficient little-endian bitvector library
description:         Little-endian bit-vectors implemented with Integers.
homepage:            https://github.com/recursion-ninja/bv-little
bug-reports:         https://github.com/recursion-ninja/bv-little/issues
license:             BSD3
license-file:        LICENSE
author:              Alex Washburn
maintainer:          hackage@recursion.ninja
copyright:
category:            Data, Bit Vectors
build-type:          Simple
extra-source-files:  changelog.md, README.md, stack.yaml

cabal-version:      >= 1.22

library

  build-depends:      base             >=4.8
                    , deepseq
                    , hashable
                    , integer-gmp
                    , mono-traversable >=1.0
                    , primitive
                    , QuickCheck       >=2.10

  default-language: Haskell2010

  exposed-modules:  Data.BitVector.LittleEndian
    
  ghc-options:      -O2
                    -- Sanity check warnings
                    -Wall
                    -Wcompat
                    -Wdodgy-foreign-imports
                    -Wduplicate-exports
                    -Wempty-enumerations
                    -Widentities
                    -Wincomplete-patterns
                    -Wincomplete-record-updates
                    -Wincomplete-uni-patterns
                    -Wmissing-fields
                    -Wmissing-monadfail-instances
                    -Wmissing-monadfail-instances
                    -Wmissing-signatures
                    -Wnoncanonical-monadfail-instances
                    -Wnoncanonical-monad-instances
                    -Wnoncanonical-monoid-instances
                    -Woverflowed-literals
                    -Woverlapping-patterns
                    -Wredundant-constraints
                    -Wsemigroup
                    -Wtabs
                    -Wunrecognised-warning-flags
                    -Wunrecognised-warning-flags
                    -Wunused-binds
                    -Wunused-do-bind
                    -Wunused-foralls
                    -Wunused-imports
                    -Wunused-matches
                    -Wwrong-do-bind

  hs-source-dirs:   src

                       
Test-Suite test-suite

  type:             exitcode-stdio-1.0

  main-is:          TestSuite.hs

  build-depends:      base               >=4.8
                    , bv-little
                    , mono-traversable   >=1.0
                    , QuickCheck         >=2.0
                    , tasty
                    , tasty-hunit
                    , tasty-quickcheck

  default-language: Haskell2010


benchmark benchmark-suite

  type:             exitcode-stdio-1.0

  main-is:          Benchmarks.hs
                      
  build-depends:      base               >=4.8
                    , bv-little
                    , criterion
                    , deepseq

  default-language: Haskell2010

  ghc-options:      -O2
                    -fmax-simplifier-iterations=10
                    -fdicts-cheap
                    -fspec-constr-count=6
                    -threaded

                    -- Sanity check warnings
                    -Wall
                    -Wcompat
                    -Wdodgy-foreign-imports
                    -Wduplicate-exports
                    -Wempty-enumerations
                    -Widentities
                    -Wincomplete-patterns
                    -Wincomplete-record-updates
                    -Wincomplete-uni-patterns
                    -Wmissing-fields
                    -Wmissing-monadfail-instances
                    -Wmissing-monadfail-instances
                    -Wmissing-signatures
                    -Wnoncanonical-monadfail-instances
                    -Wnoncanonical-monad-instances
                    -Wnoncanonical-monoid-instances
                    -Woverflowed-literals
                    -Woverlapping-patterns
                    -Wredundant-constraints
                    -Wsemigroup
                    -Wtabs
                    -Wunrecognised-warning-flags
                    -Wunrecognised-warning-flags
                    -Wunused-binds
                    -Wunused-do-bind
                    -Wunused-foralls
                    -Wunused-imports
                    -Wunused-matches
                    -Wwrong-do-bind


